# nndsk-ro-launcher

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
src/: index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: client_profiles.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: audio.rs  autobuff.rs  autopot.rs  check.rs  gecko.rs  launch.rs  launcher.rs  mod.rs  process.rs  runners.rs  server_tools.rs  servers.rs  settings.rs  setup.rs  spammer.rs
src-tauri/src/commands/server_tools/: dgvoodoo.rs  mod.rs  scan.rs
src-tauri/src/models/: autobuff.rs  autopot.rs  dependency.rs  mod.rs  runner.rs  server.rs  server_tools.rs  settings.rs  spammer.rs  tool_kind.rs
src-tauri/src/state/: game_process.rs  mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/autobuff/: loop_runner.rs  mod.rs  service.rs  session.rs
src-tauri/src/tools/autopot/: loop_runner.rs  profiles.rs  service.rs  session.rs
src-tauri/src/tools/input/: gateway.rs  mod.rs  uinput_worker.rs  ydotool.rs
src-tauri/src/tools/launcher/: mod.rs  session.rs
src-tauri/src/tools/prefix/: setup.rs
src-tauri/src/tools/server_tools/: dgvoodoo.rs  scan.rs  session.rs
src-tauri/src/tools/spammer/: gear.rs  loop_runner.rs  mod.rs  service.rs  session.rs
src-tauri/src/utils/: audio.rs  events.rs  fs.rs  game_dir.rs  gecko.rs  json.rs  mod.rs  paths.rs  prefix.rs  process.rs  runner.rs  servers.rs  settings.rs  system.rs  wine.rs
(+104 files in other folders)
