[package]
name = "ro-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "ro_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ro-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
ro-tools-core = { path = "../crates/ro-tools-core" }
ro-tools-linux = { path = "../crates/ro-tools-linux" }
